fix(Dark Mode): improve disabled state on dark mode (#113)
* chore: update dev script

* fix: improve disabled state

* fix(Dark Mode): improve dark mode button on all state

* fix: add disabled style for v-autocomplete, v-multi-select, & v-select

--- a/packages/button/src/VBtn.dark.scss
+++ b/packages/button/src/VBtn.dark.scss
@@ -12,6 +12,13 @@
       }
     }
 
+    // disabled
+    &:disabled {
+      --btn-text-color: theme('colors.neutral.500') !important;
+      --btn-bg-color: theme('colors.neutral.800') !important;
+      --btn-border-color: theme('colors.neutral.700') !important;
+    }
+
     // outlined
     &--outlined {
       &:disabled {
@@ -20,12 +27,25 @@
       }
 
       &.btn-default:not(:disabled) {
-        --btn-text-color: theme('colors.neutral.800');
-        --btn-border-color: theme('colors.neutral.800');
+        --btn-text-color: theme('colors.neutral.200');
+        --btn-border-color: theme('colors.neutral.700');
+        --btn-bg-color: theme('colors.transparent');
 
         &:hover:not(:disabled) {
           --btn-bg-color: theme('colors.neutral.800');
           --btn-border-color: theme('colors.neutral.800');
+        }
+      }
+
+      &.btn-dark:not(:disabled) {
+        --btn-text-color: theme('colors.gray.200');
+        --btn-border-color: theme('colors.gray.800');
+        --btn-bg-color: theme('colors.transparent');
+
+        &:hover:not(:disabled) {
+          --btn-bg-color: theme('colors.gray.800');
+          --btn-border-color: theme('colors.gray.800');
+          --btn-text-color: theme('colors.white');
         }
       }
     }
@@ -39,9 +59,15 @@
       }
 
       &.btn-default:not(:disabled) {
-        --btn-text-color: theme('colors.neutral.800');
+        --btn-text-color: theme('colors.neutral.200');
         &:hover:not(:disabled) {
-          --btn-text-color: theme('colors.neutral.700');
+          --btn-text-color: theme('colors.neutral.400');
+        }
+      }
+      &.btn-dark:not(:disabled) {
+        --btn-text-color: theme('colors.neutral.200');
+        &:hover:not(:disabled) {
+          --btn-text-color: theme('colors.neutral.400');
         }
       }
     }
