--- a/packages/forms/src/forms.dark.scss
+++ b/packages/forms/src/forms.dark.scss
@@ -16,5 +16,12 @@
 
     /* icon */
     --v-input-icon-color: theme('colors.neutral.500');
+
+    // disabled
+    --v-input-disabled-bg-color: theme('colors.neutral.700');
+    --v-input-disabled-border-color: theme('colors.neutral.700');
+    --v-input-disabled-color: theme('colors.neutral.200');
+    --v-input-disabled-placeholder-color: theme('colors.neutral.600');
+    --v-input-disabled-icon-color: theme('colors.neutral.600');
   }
 }
